# figmaclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  dev-setup.sh  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: auto-bump-version.yml  bump-version.yml  census.yml  ci.yml  claude-run.yml  codeql.yml  dependabot-auto-merge.yml  manage-webhooks.yml  smoke.yml  sync.yml  variables.yml  webhook.yml
docs/: INSTALL.md  body-preservation-design.md  body-preservation-invariants.md  design-weekly-report.md  failure-postmortem-2026-04-03.md  figmaclaw-canon.md  figmaclaw-md-format.md  frontmatter-v2-plan.md  giant-section-strategies.md  migration-pipeline.md  pr-129-final-report-agent-A.md  pr-129-final-report-agent-B.md  pr-129-investigation-agent-A.md  pr-129-investigation-agent-B.md  sync-observability.md  token-auth-and-rotation.md
figmaclaw/: __init__.py  _build_info.py  apply_tokens.py  audit.py  audit_page_primitives.py  audit_page_swap.py  body_validation.py  budget.py  component_map.py  config.py  figma_api_models.py  figma_client.py  figma_frontmatter.py  figma_hash.py  figma_js.py  figma_llm.py  figma_mcp.py  figma_md_parse.py  figma_models.py  figma_parse.py  figma_paths.py  figma_render.py  figma_schema.py  figma_sync_state.py  figma_utils.py  figma_variables_mcp.py  git_utils.py  image_export.py  in_context.py  instance_diff.py  main.py  normalize.py  prune_utils.py  pull_logic.py  schema_status.py  source_context.py  staleness.py  status_markers.py  token_catalog.py  token_scan.py  (+4 more)
figmaclaw/commands/: __init__.py  _shared.py  apply_tokens.py  apply_webhook.py  audit_page.py  audit_pipeline.py  build_context.py  census.py  claude_run.py  diff.py  doctor.py  enrich.py  image_urls.py  init.py  inspect.py  inspect_instance.py  list_files.py  listing_prefilter.py  mark_enriched.py  mark_stale.py  observability.py  page_tree.py  pull.py  replace_body.py  reporting.py  screenshots.py  self_cmd.py  set_flows.py  set_frames.py  skills_cmd.py  stream_format.py  suggest_tokens.py  sync.py  track.py  variables.py  webhooks.py  workflows_cmd.py  write_body.py  write_descriptions.py
figmaclaw/plugin/: in-context.js
figmaclaw/prompts/: figma-batch-enrich.md  figma-frames-enrich.md  figma-section-enrich.md  figma-section-finalize.md  figma-sections-batch.md
figmaclaw/scripts/: __main__.py  claude_run.py  stream_formatter.py
scripts/: bump_version.py  check_version_bump.py  checkpoint_pull_loop.sh  enrich_page.py  publish_generated_registry.sh  soak_reusable_workflow.sh
tests/: conftest.py  env_utils.py  test_apply_tokens_command.py  test_apply_webhook.py  test_audit_commands.py  test_body_preservation.py  test_body_validation.py  test_budget.py  test_build_context.py  test_bump_version.py  test_catalog_idempotency.py  test_census.py  test_check_version_bump.py  test_checkpoint_pull_loop.py  test_claude_run.py  test_code_invariants.py  test_compact_sidecar.py  test_config.py  test_cross_run_idempotency.py  test_diff.py  test_doctor.py  test_enrich.py  test_entry_point_heals.py  test_env_utils.py  test_figma_api_models.py  test_figma_client.py  test_figma_llm.py  test_figma_mcp.py  test_figma_md_parse_guardrails.py  test_figma_models.py  test_figma_paths_and_state.py  test_figma_render_and_parse.py  test_figma_schema.py  test_figma_utils.py  test_figma_variables_mcp.py  test_frame_hash.py  test_frontmatter_key_set_invariant.py  test_image_urls.py  test_in_context.py  test_init_cmd.py  (+49 more)
worker/: README.md  index.js  wrangler.toml
(+22 files in other folders)
