[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figmaclaw"
version = "0.2.4"
description = "Figma → git semantic design memory for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-frontmatter>=1.1",
    "rich>=13.7",
    "pyyaml>=6.0.3",
]

[project.scripts]
figmaclaw = "figmaclaw.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-xdist>=3.8.0",
    "basedpyright>=1.39.0",
    "ruff>=0.15.10",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-xdist>=3.8.0",
    "basedpyright>=1.39.0",
    "ruff>=0.15.10",
    "pre-commit>=4.5.1",
    "respx>=0.23.1",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-n auto"
markers = [
    "smoke: local smoke/integration tests that do not require live credentials",
    "smoke_api: live Figma REST smoke tests (requires FIGMA_API_KEY; hard-fail if missing)",
    "smoke_webhook: live webhook smoke tests (requires webhook permission)",
    "smoke_mcp: live Figma MCP smoke tests (requires FIGMA_MCP_TOKEN/credentials)",
]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["figmaclaw"]

[tool.hatch.build.targets.wheel.force-include]
"figmaclaw/workflows" = "figmaclaw/workflows"
"figmaclaw/skills" = "figmaclaw/skills"
"figmaclaw/prompts" = "figmaclaw/prompts"
"figmaclaw/plugin" = "figmaclaw/plugin"
